добавил документацию для ручки регистрации
